--- a/user-service.properties
+++ b/user-service.properties
@@ -1,5 +1,7 @@
 server.port=9000
 spring.application.name= user-service
+spring.cloud.compatibility-verifier.enabled=false
+
 
 ##Mongodb config
 spring.data.mongodb.host=localhost
