--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -2,6 +2,10 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Timeslot
 spring.datasource.driver-class=mongodb.jdbc.MongoDriver
+spring.application.name=appointment-service
+spring.cloud.compatibility-verifier.enabled=false
+spring.mvc.pathmatch.matching-strategy=ANT-PATH-MATCHER
+
 
 
 server.port= 8016
