--- a/user-service.properties
+++ b/user-service.properties
@@ -1,12 +1,17 @@
 server.port=9000
+
 spring.application.name= user-service
 spring.cloud.compatibility-verifier.enabled=false
-
 
 ##Mongodb config
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=userService
 spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
-
 spring.mvc.pathmatch.matching-startegy= ANT_PATH_MATCHER
+
+#Eureka Config Details
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.cloud.compatibility-verifier.enabled=false
