--- a/user-service.properties
+++ b/user-service.properties
@@ -3,7 +3,7 @@ server.port=9000
 spring.application.name= user-service
 spring.cloud.compatibility-verifier.enabled=false
 
-##Mongodb config
+#Mongodb config
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=userService
