--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -3,14 +3,14 @@ server.port=9010
 spring.application.name=authentication-service
 spring.main.allow-bean-definition-overriding=true
 
-##Mysql Config
+#Mysql Config
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db3
 spring.datasource.username=myuser
 spring.datasource.password=Root@123
 spring.jpa.hibernate.ddl-auto=update
 
-##Eureka config Details
+#Eureka config Details
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
