--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -3,14 +3,14 @@ server.port= 8060
 spring.application.name=appointment-service
 spring.main.allow-bean-definition-overriding=true
 
-## Mongo DB config
+#Mongo DB config
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Timeslot
 spring.datasource.driver-class=mongodb.jdbc.MongoDriver
 
 
-## Eureka Config
+#Eureka Config
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
