--- a/user-service.properties
+++ b/user-service.properties
@@ -10,6 +10,8 @@ spring.data.mongodb.database=userService
 spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
 spring.mvc.pathmatch.matching-startegy= ANT_PATH_MATCHER
 
+spring.cloud.config.enabled=false
+
 #Eureka Config Details
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
