--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -8,15 +8,14 @@ eureka.client.fetch-registry=true
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
 
-#CORS configuration
-spring:
-cloud:
-gateway:
-globalcors:
-corsConfigurations:
-'[/**]':
-allowedOrigins:"*"
-allowedMethods:"*"
+#Manual routing : To enable discovery feature
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.main.web-application-type=reactive
+
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
 
 #Routing configuration for User Service
 spring.cloud.gateway.routes[0].id=user-service
@@ -30,7 +29,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/auth/**
 
 #Routing configuration for Appointment Service
 spring.cloud.gateway.routes[2].id=appointment-service
-spring.cloud.gateway.routes[2].uri=lb://APPOINTMENT-SERVICE
+spring.cloud.gateway.routes[2].uri=http://localhost:8060/
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/appointment/**
 
 #Routing configuration for Email Service
