--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -18,20 +18,29 @@ logging.level.org.springframework.cloud.gateway=TRACE
 
 #Routing configuration for User Service
 spring.cloud.gateway.routes[0].id=user-service
-spring.cloud.gateway.routes[0].uri=http://localhost:9000/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/**
+spring.cloud.gateway.routes[0].uri=http://localhost:9000
+spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/user(?<segment>/?.*), $\{segment}
+
 
 #Routing configuration for Authentication Service
 spring.cloud.gateway.routes[1].id=authentication-service
-spring.cloud.gateway.routes[1].uri=http://localhost:9010/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/auth/**
+spring.cloud.gateway.routes[1].uri=http://localhost:9010
+spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/auth(?<segment>/?.*), $\{segment}
+
 
 #Routing configuration for Appointment Service
 spring.cloud.gateway.routes[2].id=appointment-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8060/
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/appointment/**
+spring.cloud.gateway.routes[2].uri=http://localhost:8060
+spring.cloud.gateway.routes[2].predicates[0]=Path=/appointment/**
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/appointment(?<segment>/?.*), $\{segment}
+
+
 
 #Routing configuration for Email Service
 spring.cloud.gateway.routes[3].id=email-service
-spring.cloud.gateway.routes[3].uri=http://localhost:8075/
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/email/**
+spring.cloud.gateway.routes[3].uri=http://localhost:8075
+spring.cloud.gateway.routes[3].predicates[0]=Path=/email/**
+spring.cloud.gateway.routes[3].filters[0]=RewritePath=/email(?<segment>/?.*), $\{segment}
+
