--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -6,7 +6,7 @@ spring.main.allow-bean-definition-overriding=true
 #Mongo DB config
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=Timeslot
+spring.data.mongodb.database=appointment
 spring.datasource.driver-class=mongodb.jdbc.MongoDriver
 
 
