--- a/email-service.properties
+++ b/email-service.properties
@@ -6,8 +6,8 @@ spring.main.allow-bean-definition-overriding=true
 #Email Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pratikkhodke2000@gmail.com
-spring.mail.password=ybaryfjdpkacoiek
+spring.mail.username=bhealthy45@gmail.com
+spring.mail.password=dhtdywwcfjccmmzl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
