--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -8,6 +8,16 @@ eureka.client.fetch-registry=true
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
 
+#CORS configuration
+spring:
+cloud:
+gateway:
+globalcors:
+corsConfigurations:
+'[/**]':
+allowedOrigins:"*"
+allowedMethods:"*"
+
 #Manual routing : To enable discovery feature
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
@@ -43,4 +53,3 @@ spring.cloud.gateway.routes[3].id=email-service
 spring.cloud.gateway.routes[3].uri=http://localhost:8075
 spring.cloud.gateway.routes[3].predicates[0]=Path=/email/**
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/email(?<segment>/?.*), $\{segment}
-
