--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -17,6 +17,8 @@ corsConfigurations:
 '[/**]':
 allowedOrigins:"*"
 allowedMethods:"*"
+allowedHeaders: "*"
+exposedHeaders: "*"
 
 #Manual routing : To enable discovery feature
 spring.cloud.gateway.discovery.locator.enabled=true
