--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -9,6 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db3
 spring.datasource.username=myuser
 spring.datasource.password=Root@123
 spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Eureka config Details
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
