--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -5,7 +5,7 @@ spring.main.allow-bean-definition-overriding=true
 
 #Mysql Config
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db3
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db3
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
