--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -8,17 +8,10 @@ eureka.client.fetch-registry=true
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
 
-#CORS configuration
-spring:
-cloud:
-gateway:
-globalcors:
-corsConfigurations:
-'[/**]':
-allowedOrigins:"*"
-allowedMethods:"*"
-allowedHeaders: "*"
-exposedHeaders: "*"
+#CORS configuration - Any port numbers can be accessed
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedMethods=*
+spring.cloud.gateway.globalcors.corsConfigurations.'[/**]'.allowedHeaders=*
 
 #Manual routing : To enable discovery feature
 spring.cloud.gateway.discovery.locator.enabled=true
