--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -5,9 +5,9 @@ spring.main.allow-bean-definition-overriding=true
 
 #Mysql Config
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db3
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/db5
+spring.datasource.username=dbuser
+spring.datasource.password=Nimi@12345
 spring.jpa.hibernate.ddl-auto=update
  spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
