--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -9,7 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db5
 spring.datasource.username=dbuser
 spring.datasource.password=Nimi@12345
 spring.jpa.hibernate.ddl-auto=update
- spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Eureka config Details
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
