--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -6,8 +6,8 @@ spring.main.allow-bean-definition-overriding=true
 #Mysql Config
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db5
-spring.datasource.username=dbuser
-spring.datasource.password=Nimi@12345
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
