--- a/webapp.properties
+++ b/webapp.properties
@@ -1,5 +1,5 @@
 server.port=65
-
+spring.application.name= webapp
 
 #Eureka Config Details
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
