--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -48,3 +48,10 @@ spring.cloud.gateway.routes[3].id=email-service
 spring.cloud.gateway.routes[3].uri=http://localhost:8075
 spring.cloud.gateway.routes[3].predicates[0]=Path=/email/**
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/email(?<segment>/?.*), $\{segment}
+
+
+#Routing configuration for Webapp
+spring.cloud.gateway.routes[4].id=webapp
+spring.cloud.gateway.routes[4].uri=http://localhost:4200
+spring.cloud.gateway.routes[4].predicates[0]=Path=/**
+spring.cloud.gateway.routes[4].filters[0]=RewritePath=(?<segment>/?.*), $\{segment}
