--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -8,4 +8,4 @@ eureka.client.fetch-registry=false
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
-eureka.client.serviceUrl.defaultZone=http://54.191.105.162:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
